--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
     <h2>Ca envoy du pâté mon neuveu !</h2>
 
     <div class="tabs">
-        <div id="tabs1">Presentation</div>
-        <div id="tabs2">Menu</div>
-        <div id="tabs3">Qui sommes-nous ?</div>
+        <div><a id="tabs1" href="#">Presentation</a></div>
+        <div><a id="tabs2" href="#">Menu</a></div>
+        <div><a id="tabs3" href="#">Qui sommes-nous ?</a></div>
     </div>
 
     <%= yield %>
