Add some stuff for carousel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ma BoulanjQuery</title>
+    <title>jQuery</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,9 +12,11 @@
   </head>
 
   <body>
-    <h1>Ma BoulanjQuery</h1>
-
-    <h2>Ca envoy du pâté mon neuveu !</h2>
+    <center>
+      <h1>Animations jQuery</h1>
+      <div id="carousel">
+      <img src="http://www.casa.ucl.ac.uk/andy/blogimages/ParisClouds.jpg" alt="parisClouds"></center>
+    </div>
 
     <div class="tabs">
         <div><a id="tabs1" href="#">Presentation</a></div>
